# sodoku_solver

./: Cargo.toml
src/: main.rs
src/model/: model.rs
