[env]


[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyset = "0.4.10"
array-init = "2.0.0"

#ui
opencv = { version = "0.65.0"  }


[build]
target = "x86_64-pc-windows-msvc"